--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,8 +6,11 @@
 @import "loader"
 @import "error-page"
 @import "header/header"
+@import "menu/index"
 
 body
   background-color: #000
   line-height: 1.5
   font-size: 16px
+
+@import "form"
