--- a/assets/sass/menu/_full.sass
+++ b/assets/sass/menu/_full.sass
@@ -12,3 +12,18 @@
         transform: scale(1)
       &__button
         transform: scale(1)
+@media screen and (max-width: 768px)
+  .menu
+    &_big
+      width: 100%
+      left: 0
+      .menu
+        &__text
+          display: inline
+          width: auto
+        &__item
+          a
+            left: 0
+            flex-basis: 100%
+            display: flex
+            justify-content: center
