--- a/assets/sass/menu/_index.sass
+++ b/assets/sass/menu/_index.sass
@@ -107,6 +107,12 @@
       font-weight: 700
       letter-spacing: 0.4px
 
+@media screen and (max-width: 768px)
+  .menu
+    padding-top: 0
+    transition: all .25s
+    overflow-y: auto
+    overflow-x: hidden
 
 @import "empty"
 @import "full"
