--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,22 +7,18 @@
 @import "error-page"
 @import "header/header"
 @import "menu/index"
-
+@import "scroll"
 body
   background-color: #000
   line-height: 1.5
   font-size: 16px
 .container
   padding-left: 68px
+.section
   min-height: 100vh
   display: flex
-  align-items: stretch
-.section
-  padding-top: 60px
-  flex-basis: 100%
-  display: flex
   justify-content: center
-  align-items: stretch
+  align-items: center
 
   &_image
     background-repeat: no-repeat
